fixed pics page and header on small screens

--- a/public/stylesheets/smith.css
+++ b/public/stylesheets/smith.css
@@ -5,6 +5,7 @@ body {
   height: 100%;
   margin: 0px auto;
   padding: 0px;
+  position: relative;
   text-align: center;
   width: 85%; /* 1042px */
 }
@@ -12,6 +13,42 @@ body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: .9125em;     /* 13px; */
  /* line-height: 18px; */
+}
+.hidden {
+  display: none;
+}
+div#deactivate {
+  background-color: #CCC;
+  position: fixed;
+  opacity: .75;
+  z-index: 1001;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+  left: 0px;
+}
+div#popup {
+  background-color: #FFF;
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  z-index: 1002;
+  top: 15%;
+}
+p.photo{
+  text-align: center;
+  float: left;
+  height: 250px;
+  margin: 10px;
+}
+p.photo img{
+  border: 2px solid #333;
+}
+div#clear{
+  clear: both;
+}
+img {
+  max-width: 100%;
 }
 pre {
   background-color: #eee;
@@ -222,6 +259,17 @@ div#nav li:hover {
   }
 }
 
+@media screen and (max-width: 450px) {
+  div#header h1 {
+    font-size: 2.5em;
+  }
+}
+@media screen and (max-width: 350px) {
+  div#header h1 {
+    font-size: 1.7em;
+  }
+}
+
 div#body {
   margin-left: auto;
   margin-right: auto;
@@ -242,9 +290,9 @@ div#body {
 }
 p.intro {
   line-height: 1.4em;
-  font-size: 1.38em /* 18px; */
+  font-size: 1.38em; /* 18px; */
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1000px) {
   p.intro {
     padding-bottom: 15px;
   }
